--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,6 +37,7 @@
     <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <a routerLink="/solutions" class="card-link"><fa [name]="'plus-circle'"></fa></a>
+    <!-- <a routerLink="/solutionsView" class="card-link"><fa [name]="'plus-circle'"></fa></a> -->
     <a routerLink="/solutionsView" class="view-edit card-link"><fa [name]="'eye'"></fa> / <fa [name]="'edit'"></fa></a>
   </div>
 </div>
