--- a/src/app/edit-solution/edit-solution-form/edit-solution-form.component.html
+++ b/src/app/edit-solution/edit-solution-form/edit-solution-form.component.html
@@ -115,10 +115,13 @@
 		              </select>
           </div>
           <div class="contact">
+          
+          //solutionId
           	<div class="certification-test form-row">
             <div class="form-group col-md-6">
                 <label for="firstName"><b>First Name</b></label>
                 <input type="text" class="asterisk form-control" id="firstName" ngModel name="firstName" readonly>
+                <input type="hidden" ngModel name="solutionId">
             </div>
             <div class="form-group col-md-6">
                 <label for="lastName"><b>Last Name</b></label>
@@ -146,9 +149,9 @@
           </div>
          <hr />
          <h4>Attachments</h4>
-         <div class="attachments-div"><!-- <p class="attachments"><b>Attachments</b> --><!-- </p> -->
+        <!--  <div class="attachments-div"><p class="attachments"><b>Attachments</b> --><!-- </p>
             	<input type="file">	
-            </div>
+            </div> -->
          <div class="buttons">
          	<button type="cancel" class="cancel btn btn-primary">Cancel</button>
         	<button type="submit" class="submit btn btn-primary" [disabled]="!form.valid">Submit</button>
