--- a/src/app/policy-view-component/policy-view-forms-component/documents/documents.component.html
+++ b/src/app/policy-view-component/policy-view-forms-component/documents/documents.component.html
@@ -1,8 +1,40 @@
 <div class="documents">
 				<span><b>DOCUMENTS</b></span>
-				<!-- <div class="policy-edit"><fa class="edit-icon icons" (click)="" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'plus'"></fa></div>
+					<div class="policy-edit"><fa class="edit-icon icons" (click)="changeButton()" *ngIf="plus" data-toggle="tooltip" data-placement="right" title="Save" data-animation="true" data-delay="0" [name]="'edit'"></fa>
+						<fa (click)="open(content)" *ngIf="!plus" [name]="'download'" class="download-icon icons"></fa>
+						<fa *ngIf="!plus" class="save-icon icons" [name]="'save'"></fa>
+						<fa (click)=close() *ngIf="!plus" class="close-icon icons" [name]="'times-circle'"></fa>
+					</div>
 			<hr />
- -->			</div>
+ 		</div>
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Policy Documents</h4>
+    <!-- <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button> -->
+  </div>
+  <div class="modal-body">
+    <form>
+    	<div class="form-row">
+    		<div class="form-group col-12">
+    			<label for="attachments"><b>Attachment</b></label>
+    			<input id="attachments" class="form-control" type="file" />
+    		</div>
+    	</div>
+    	<hr />
+    	<div class="form-row">
+    		<div class="form-group col-12">
+    			<label for="fileList"><b>Attachment</b></label>
+    		</div>
+    	</div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Cancel</button>
+    <button type="button" class="btn btn-outline-dark">Upload</button>
+  </div>
+</ng-template>
 <div class="installation form-group">
             <label class="hosting-notes" for="policyResources"><b>Policy Resources</b></label><!-- <div class="asterisk-inline asterisk">*</div> -->
             <textarea cols="156" rows="7" id="Policy Resources" ngModel name="policyResurces" required></textarea>
