--- a/src/app/policy-view-component/policy-view-forms-component/policy-details/policy-details.component.css
+++ b/src/app/policy-view-component/policy-view-forms-component/policy-details/policy-details.component.css
@@ -8,6 +8,42 @@
 	margin-top: 15px;
 }
 
+.policy-edit{
+	float: right;
+}
+
+.icons{
+    vertical-align: middle;
+    font-size: 20px;
+    margin-top: -20px;
+    padding: 2px;
+    margin-left: 5px;
+}
+
+.download-icon{
+	color: #3A539B;
+}
+
+.edit-icon{
+	color: #3A539B;
+}
+
+.upload-icon{
+	color: #3A539B;
+}
+
+.plus-icon{
+	color: #3A539B;
+}
+
+.save-icon{
+	color: #3A539B;
+}
+
+.close-icon{
+	color: #3A539B;
+}
+
 input[readonly] {
 	background-color: #ffffff;
 	}
@@ -19,4 +55,14 @@ table{
 
 table thead tr th{
 	font-weight: 500;
+}
+
+.modal-header{
+	background-color: #3A539B;
+	color: #ffffff;
+}
+
+.btn{
+	background-color: #3A539B;
+	border-color: #3A539B;
 }
